# src/features/user/user.controller.js
@@ -4,6 +4,7 @@ import bcrypt from 'bcrypt';
 
 import UserModel from "./user.model.js";
 import UserRepository from "./user.repository.js";
+import { check, validationResult } from "express-validator";
 
 export default class UserController {
     constructor() {
@@ -25,7 +26,11 @@ export default class UserController {
             const response = await this.userRepository.signUp(newUser);
 
             // Send the response
-            return res.status(201).send(response);
+            if (response.success) {
+                return res.status(201).send(response);
+            } else {
+                return res.status(400).send(response);
+            }
         } catch (error) {
             // Pass any error to the error handler
             next(error);
@@ -79,24 +84,94 @@ export default class UserController {
     resetDetails = async (req, res, next) => {
         try {
             const { name, email, password, bio } = req.body;
+            const updatedDetails = {};
+            const validationResults = [];
 
-            // Hash the new password
-            const hashPassword = await bcrypt.hash(password, 12);
+            // Validate and update bio
+            if (bio) {
+                validationResults.push(
+                    check('bio')
+                        .notEmpty()
+                        .withMessage('Bio should not be empty')
+                );
+                updatedDetails.bio = bio;
+            }
 
-            // Create a new user model instance with updated details
-            const updatedDetails = new UserModel(name, email, hashPassword, bio, req.file.path);
+            // Validate and update name
+            if (name) {
+                validationResults.push(
+                    check('name')
+                        .isLength({ min: 5, max: 25 })
+                        .withMessage('Name must be between 5 to 25 characters')
+                        .custom((value) => {
+                            return !/\d/.test(value) && !/[!@#$%^&*()_+{}\[\]:;<>,.?~\\/-]/.test(value);
+                        })
+                        .withMessage("Name doesn't contain Special Character and digit")
+                );
+                updatedDetails.userName = name;
+            }
+
+            // Validate and update email
+            if (email) {
+                validationResults.push(
+                    check('email')
+                        .isEmail().withMessage('Enter a valid email')
+                );
+                updatedDetails.email = email;
+            }
+
+            // Validate and update password
+            if (password) {
+                validationResults.push(
+                    check('password')
+                        .isLength({ min: 8, max: 24 }).withMessage('Password must be between 8 and 24 characters')
+                        .matches(/[A-Z]/).withMessage('Password must contain at least one uppercase letter')
+                        .matches(/[a-z]/).withMessage('Password must contain at least one lowercase letter')
+                        .matches(/\d/).withMessage('Password must contain at least one digit')
+                        .matches(/[!@#$%^&*()_+{}\[\]:;<>,.?~\\/-]/).withMessage('Password must contain at least one special character')
+                );
+                const hashPassword = await bcrypt.hash(password, 12);
+                updatedDetails.password = hashPassword;
+            }
+
+            // Validate and update profileImage
+            if (req.file) {
+                validationResults.push(
+                    check("profileImage")
+                        .custom((value) => {
+                            if (req.file.mimetype === "image/gif" || req.file.mimetype === "image/jpg" || req.file.mimetype === "image/png" || req.file.mimetype === "image/jpeg") {
+                                return true;
+                            } else {
+                                return false;
+                            }
+                        }).withMessage("Please upload an image gif, Jpg, Jpeg, Png")
+                );
+                updatedDetails.profileImage = req.file.path;
+            }
+
+            // Run validation for each field
+            for (const validation of validationResults) {
+                await validation.run(req);
+            }
+
+            const errors = validationResult(req);
+
+            if (!errors.isEmpty()) {
+                return res.status(400).json({ success: false, msg: 'Validation failed', errors: errors.array() });
+            }
 
             // Reset user details using the repository
-            const response = await this.userRepository.resetDetails(req.email, updatedDetails);
+            const response = await this.userRepository.resetDetails(req.userID, updatedDetails);
 
             // Send the response
             if (response.success) {
-                return res.status(201).send(response);
+                return res.status(200).send(response);
             } else {
                 return res.status(404).send(response);
             }
         } catch (err) {
             // Pass any error to the error handler
+            console.log(err);
             next(err);
         }
     }
@@ -109,7 +184,7 @@ export default class UserController {
 
             // Send the response
             if (response.success) {
-                return res.status(201).send(response);
+                return res.status(200).send(response);
             } else {
                 return res.status(404).send(response);
             }
@@ -134,7 +209,7 @@ export default class UserController {
 
             // Send the response
             if (response.success) {
-                return res.status(201).send(response);
+                return res.status(200).send(response);
             } else {
                 return res.status(404).send(response);
             }
@@ -151,7 +226,7 @@ export default class UserController {
 
             // Check if the user is trying to unfollow themselves
             if (userID === req.params.id) {
-                return res.status(201).send({ success: false, msg: "you can't unfollow yourself" });
+                return res.status(400).send({ success: false, msg: "you can't unfollow yourself" });
             }
 
             // Unfollow the user using the repository
@@ -159,7 +234,7 @@ export default class UserController {
 
             // Send the response
             if (response.success) {
-                return res.status(201).send(response);
+                return res.status(200).send(response);
             } else {
                 return res.status(404).send(response);
             }
@@ -179,7 +254,7 @@ export default class UserController {
 
             // Send the response
             if (response.success) {
-                return res.status(201).send(response);
+                return res.status(200).send(response);
             } else {
                 return res.status(404).send(response);
             }
@@ -199,7 +274,7 @@ export default class UserController {
 
             // Send the response
             if (response.success) {
-                return res.status(201).send(response);
+                return res.status(200).send(response);
             } else {
                 return res.status(404).send(response);
             }
