# swagger3.0.json
@@ -100,6 +100,9 @@
                     "200": {
                         "description": "OK"
                     },
+                    "201": {
+                        "description": "Registeration Successfull"
+                    },
                     "400": {
                         "description": "You are already Registered"
                     }
@@ -122,13 +125,6 @@
                         "multipart/form-data": {
                             "schema": {
                                 "type": "object",
-                                "required": [
-                                    "bio",
-                                    "name",
-                                    "email",
-                                    "password",
-                                    "profileImage"
-                                ],
                                 "properties": {
                                     "bio": {
                                         "type": "string"
@@ -157,6 +153,9 @@
                     },
                     "401": {
                         "description": "Unauthorized"
+                    },
+                    "400": {
+                        "description": "Validation failed"
                     }
                 }
             }
